--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: BlackAnt
+title: Blackant
 subtitle:
-description: This website is designed by x-space, and use to offer a professional robot solutions.
-author: ZhuChaozheng SunTong ChuZhefan
-language: default
+description:
+keywords:
+author: Hhu_GFBlab
+language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.blackant.org
+url: http://yoursite.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -57,16 +58,6 @@ default_category: uncategorized
 category_map:
 tag_map:
 
-
-# Archives 默认值为2，这里都修改为1，相应页面就会只列出标题，而非全文
-## 2: Enable pagination
-## 1: Disable pagination
-## 0: Fully Disable
-archive: 1
-category: 1
-tag: 1
-
-
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
@@ -76,27 +67,17 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 5
+per_page: 10
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: light
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repo: https://github.com/h5li/h5li.gitub.io.git
+  type: git 
+  repository: git@github.com:liuholin/liuholin.github.io.git
   branch: master
-  
-
-# hexo sitemap网站地图
-sitemap:
-  path: sitemap.xml
-baidusitemap:
-  path: baidusitemap.xml
-
-plugins:
-  -hexo-math
